@@ -383,6 +383,9 @@ Release 2.7.0 - UNRELEASED
     HDFS-7308. Change the packet chunk size computation in DFSOutputStream in
     order to enforce packet size <= 64kB.  (Takuya Fukudome via szetszwo)
 
+    HDFS-7685. Document dfs.namenode.heartbeat.recheck-interval in
+    hdfs-default.xml. (Kai Sasaki via aajisaka)
+
   OPTIMIZATIONS
 
   BUG FIXES
